<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical" >
	    
    <TextView android:id="@+id/buttonBarTitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="@dimen/table_horizontal_padding"
        android:paddingRight="@dimen/table_horizontal_padding"
	    android:text="@string/button_bar_titile" />
	    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:measureWithLargestChild="true"
	    android:orientation="horizontal" >
   	
		<Button style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/btnBarImport"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_bar_import" />
		
		<Button style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/btnBarExport"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_bar_export" />
	        
		<Button style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/btnBarOpen"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_bar_open" />
		
		<Button style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/btnBarSave"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_bar_save" />
	</LinearLayout>
</LinearLayout>
