<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSelectFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_fwup_select_file" />

		<Button
		    android:id="@+id/btnStart"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/tab_fwup_start" />

		<TextView
		    android:id="@+id/tvFirmwareUpdateStatus"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:maxLines="10"
		    android:text="@string/tab_fwup_status"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    

</ScrollView>
