<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvEscPasswordOld"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
        android:text="@string/dialog_esc_password_message_old"
        android:visibility="visible"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"/>

    <EditText
        android:id="@+id/etEscPasswordOld"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLength="12"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="10"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvEscPasswordNew1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
        android:text="@string/dialog_esc_password_message_new1"
        android:visibility="visible"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"/>

    <EditText
        android:id="@+id/etEscPasswordNew1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLength="12"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:id="@+id/tvEscPasswordNew2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
        android:text="@string/dialog_esc_password_message_new2"
        android:visibility="visible"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"/>

    <EditText
        android:id="@+id/etEscPasswordNew2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLength="12"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    
    <LinearLayout 
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true">

        <Button style="?android:attr/buttonBarButtonStyle" android:id="@+id/btnEscPasswordModify"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_modify" />
        
        <Button style="?android:attr/buttonBarButtonStyle" android:id="@+id/btnEscPasswordCancel"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />
        
    </LinearLayout>
</LinearLayout>
